# AIInformationProcessor

./: .gitattributes  .gitignore  .pre-commit-config.yaml  2026-04-19_xiaoyuzhou_04_debug_summary.md  AGENTS.md  AI信息处理系统_本地部署方案.md  AI信息处理系统_架构校正版.md  ai_context_request_for_local_ai.md  大模型机制.md
contracts/: action_policy_decision.schema.json  dedupe_decision.schema.json  llm_score.schema.json  normalized_text_object.schema.json  validate_contract.py  writer_result.schema.json
contracts/examples/: manual.normalized.json  private.normalized.json  rss.diff_push.dedupe_decision.json  rss.enriched.normalized.json  rss.keep_reference.action_policy_decision.json  rss.llm_score.json  rss.normalized.json  rss.written.writer_result.json  (+1 more)
deploy/: .env.example  LLM_PROVIDER_PLAYBOOK.md  README.md  TRANSCRIPT_RUNTIME_INVARIANTS.md  compose.rsshub-local.yaml  compose.yaml
services/collector_web/: main.py  pyproject.toml
services/collector_web/docker/: Dockerfile
services/collector_web/src/collector_web/: calibration_compare.py  config.py  db.py  manual_submit.py  precheck.py  qdrant.py  repository.py  rss_poll.py  status.py  url_tools.py
services/collector_web/src/collector_web/api/: app.py  server.py
services/collector_web/src/collector_web/web/static/css/: app.css
services/collector_web/src/collector_web/web/static/js/: calibration_compare.js  home.js  status.js
services/collector_web/src/collector_web/web/templates/: base.html  calibration_compare.html  home.html  manual_submit.html  status.html
services/collector_web/tests/: test_dashboard.py
(+342 files in other folders)
